# sigma

./: .buildinfo  .cmake-format  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  arithmetic_8hpp.html  arithmetic_8hpp.js  arithmetic_8hpp_source.html  arithmetic_8ipp_source.html  basic_8hpp.html  basic_8hpp.js  basic_8hpp_source.html  basic_8ipp_source.html  classes.html  classsigma_1_1Uncertain-members.html  classsigma_1_1Uncertain.html  classsigma_1_1Uncertain.js  classsigma_1_1detail___1_1Setter-members.html  classsigma_1_1detail___1_1Setter.html  classsigma_1_1detail___1_1Setter.js  complex_8hpp.html  complex_8hpp.js  complex_8hpp_source.html  dir_2eaa60ff26f5c3b3860f9dd50d24e194.html  dir_2eaa60ff26f5c3b3860f9dd50d24e194.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_6b0b3395cd991433ce090984f671e096.html  dir_6b0b3395cd991433ce090984f671e096.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d49252945ee23fb9c76f47557b48f617.html  dir_d49252945ee23fb9c76f47557b48f617.js  doxygen_crawl.html  eigen__compat_8hpp.html  eigen__compat_8hpp.js  eigen__compat_8hpp_source.html  (+71 more)
.github/: test_toolchain.cmake
.github/workflow_toolchains/: base.cmake  clang-15.cmake  clang-16.cmake  clang-default.cmake  gnu-12.cmake  gnu-13.cmake  gnu-14.cmake  test_base.cmake  windows.cmake
.github/workflows/: merge.yaml  pull_request.yaml
cmake/: cxx_api_docs.cmake  get_cmaize.cmake
docs/: background.md  code_of_conduct.md  contributing.md  examples.md  main.md  make.bat
docs/doxygen-custom/: custom.css  header.html
docs/source/: conf.py  index.rst
include/sigma/: eigen_compat.hpp  independent_variable.hpp  sigma.hpp  uncertain.hpp
paper/: paper.bib  paper.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  (+43 more)
sigma_cxx_api/: annotated.html  arithmetic_8hpp.html  arithmetic_8hpp_source.html  basic_8hpp.html  basic_8hpp_source.html  classes.html  classsigma_1_1Uncertain-members.html  classsigma_1_1Uncertain.html  classsigma_1_1detail___1_1Setter-members.html  classsigma_1_1detail___1_1Setter.html  complex_8hpp.html  complex_8hpp_source.html  dir_2eaa60ff26f5c3b3860f9dd50d24e194.html  dir_6b0b3395cd991433ce090984f671e096.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d49252945ee23fb9c76f47557b48f617.html  eigen__compat_8hpp.html  eigen__compat_8hpp_source.html  error__and__gamma_8hpp.html  error__and__gamma_8hpp_source.html  exponents_8hpp.html  exponents_8hpp_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  globals.html  globals_defs.html  hierarchy.html  hyperbolic_8hpp.html  hyperbolic_8hpp_source.html  index.html  menudata.js  namespaceEigen.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  (+18 more)
sigma_cxx_api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+20 more)
src/sigma/: independent_variable.cpp  independent_variable.hpp  sigma.cpp  uncertain.cpp
tests/unit_tests/: test_eigen.cpp  test_main.cpp  (+9 more)
(+45 files in other folders)
